force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <pluralLabel>Questions</pluralLabel>
    <nameField>
        <label>Question Name</label>
        <type>AutoNumber</type>
        <displayFormat>Q-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>