force-app/main/default/objects/Question__c/fields/Order_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Order_Sequence__c</fullName>
    <label>Order Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>